--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@
 title: Jerry Ruijie Gao
 description: sophomore | EE | computer architecture
 
-baseurl: /gradfolio #name of GitHub repository
-url: "" #custom url to be used instead of GitHub repository
+baseurl: "" #name of GitHub repository
+url: "https://jerrygao.me" #custom url to be used instead of GitHub repository
 email: wuliJerry927@outlook.com#
 
 # Pagination
