--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 ### your site title here
 
 title: Jerry Ruijie Gao
-description: sophomore | EE | computer architecture
+description: Sophomore | EE | Computer Architecture
 
 baseurl: "" #name of GitHub repository
 url: "https://jerrygao.me" #custom url to be used instead of GitHub repository
