--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ compress_html:
   endings: [all]
   ignore:
     envs: [local]
-  blanklines: false
+  blanklines: true
   profile: false
   startings: []
 
